# CrawlerLLM

./: .gitignore  FEATURES_ROADMAP.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  README.md  analyze_and_separate.py  index-BLn6Fdf8.js  mYqiL4PNgya8LzJ3LUHrg  page_text (1).txt  rebuild_project.py  vendor-XhZj4hnV.js
job_scraper_project/: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SETUP.md  LICENSE  Makefile  QUICK_START.md  README.md  SECURITY.md  SETUP_COMPLETE.md  config.yaml  demo_jobcopilot.py  docker-compose.yml  launch.bat  launch.sh  main.py  pyproject.toml  requirements-ml.txt  requirements.txt  setup.py
job_scraper_project/.streamlit/: config.toml
job_scraper_project/adapters/: base_scraper.py  glassdoor.py  indeed.py  linkedin.py
job_scraper_project/ai_dev/: authenticity_polish.py  feature_developer.py  stealth_scorer.py  text_generator.py  voice_cloning.py
job_scraper_project/automation/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  application_submitter.py  captcha_solver.py  document_uploader.py  form_mapper.py  models.py  navigation.py  rate_limiter.py  redirect_handler.py
job_scraper_project/config/: automation.yaml  discovery.yaml  matching.yaml  tracking.yaml
job_scraper_project/core/: benchmark.py  browser.py  config.py  environment.py  export_manager.py  health.py  logger.py  proxy.py  utils.py
job_scraper_project/dashboard/: app.py  copilot_wizard.py  home.py  jobcopilot_app.py
job_scraper_project/discovery/: __init__.py  deduplicator.py  notifier.py  scheduler.py
job_scraper_project/docs/: AI_DETECTION_AVOIDANCE.md  INDEX.md  (+16 more)
(+77 files in other folders)
